fix gravitation after compositor "polluted" it by updating the decoration _before_ placement

BUG: 278981
REVIEW: 103391